[package]
name = "ruPyInven"
version = "0.1.0"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"

[lib]
name = "ruPyInven_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ruPyInven_bin"
path = "src/bin.rs"
[dependencies]
rayon = "1.3.0"
serde_derive = "1.0.90"
serde_json = "1.0.52"
serde = { version = "1.0.90", features = ["derive"] }

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
